--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   --border-radius: 16px;
-  --brand-tezkor: #fbc02d;
-  --brand-tezkor-light: #fdd835;
+  --brand-tezkor: #F59A07;
+  --brand-tezkor-light: #FFB74D;
   --brand-humo: #2d9da6;
 }
 
@@ -35,8 +35,8 @@
   --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.4), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.5), 0 4px 6px -2px rgba(0, 0, 0, 0.3);
   --border-radius: 16px;
-  --brand-tezkor: #fbc02d;
-  --brand-tezkor-light: #fdd835;
+  --brand-tezkor: #4284F5;
+  --brand-tezkor-light: #64B5F6;
   --brand-humo: #2d9da6;
 }
 
